# calibre-hardcover-sync-plugin

./: .gitignore  .gitlint  .lefthook.yml  README.md  cliff.toml  justfile  mise.toml  pyproject.toml
.calibre/: .gitignore  justfile
.github/: codecov.yml  renovate.json
.github/workflows/: build.yaml
lib/graphql/: README.md  pyproject.toml
libs/common/: pyproject.toml
libs/common/src/common/: cli.py
libs/graphql/: pyproject.toml
libs/graphql/src/graphql/: client.py
libs/graphql/test/graphql/: test_client.py
plugins/hardcover/: README.md  __builtins__.pyi  pyproject.toml
plugins/hardcover/src/hardcover/: __init__.py  identifier.py  models.py  provider.py  queries.py
plugins/hardcover/test/: conftest.py  test_identifier.py  test_provider.py  utils.py
plugins/hardcover/test/data/: find_books_by_id.json
plugins/manga-chapters/: README.md  __builtins__.pyi  pyproject.toml
plugins/manga-chapters/src/manga_chapters/: __init__.py  config.py  llm.py  main.py
scripts/: build_env.py  bump.sh  bundle.py  bundle.sh  check_plugin_import.py  release.sh
shims/: pytest
src/hardcover_list/: __init__.py  auto_push_dialog.py  config.py  config_widget.py  lists.py  read_date_dialog.py  ui.py
src/hardcover_list/cull_isbn/: isbn_lookup.py  isbn_select_dialog.py
src/hardcover_sync/: __init__.py  book_details.py  config.py  lists.py  lists_cache.py  menu_setup.py  queries.py  read_date_dialog.py  ui.py
src/hardcover_sync/cull_isbn/: isbn_lookup.py  isbn_scan.py  isbn_select_dialog.py
