[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover-list"
dynamic = ["version"]
description = "Hardcover list membership and ISBN tools for Calibre"
readme = "README.md"
authors = [{ name = "Juan York" }]
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = ["hardcover-list-graphql"]

[project.urls]
Homepage = "https://hardcover.app/"
Documentation = "https://docs.hardcover.app/"

[tool.uv.sources]
hardcover-list-graphql = { path = "lib/graphql" }

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "lefthook>=1.8.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "msgpack>=1.1.0",
    "lxml-stubs>=0.5.1",
    "pymarkdownlnt>=0.9.29",
    "pyqt5>=5.15.11",
]

[tool.versioningit.vcs]
default-tag = "hardcover-list-0.0.0"
match = ["hardcover-list-*"]
decribe-subst = ""

[tool.versioningit.tag2version]
rmprefix = "hardcover-list-"

[tool.versioningit.write]
template = '''
__version__ = "{version}"
__version_tuple__ = {version_tuple}
'''
file = "src/hardcover_list/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
omit = ["*test*"]
source = ["src", "lib"]

[tool.pytest.ini_options]
addopts = "--cov -v --import-mode=importlib"

[tool.ruff]
builtins = ["_", "I", "get_icons"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S", "INT"]

[tool.ruff.lint.per-file-ignores]
"**/test/**/test_*.py" = ["S101"]

[tool.pyright]
typeCheckingMode = "standard"
