[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover-sync-graphql"
version = "0.1.0"
description = "GraphQL client for the Hardcover Sync Calibre plugin"
readme = "README.md"
authors = [{ name = "Juan York" }]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
