[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.9"
dependencies = []
