[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-chapters"
dynamic = ["version"]
description = "Editor Plugin to extract Manga Table of Contents from an Image Contents page"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.11"
dependencies = ["openai>=1.74.0"]

[tool.versioningit.vcs]
default-tag = "manga-chapters-0.0.0"
match = ["manga-chapters-*"]
decribe-subst = "%(describe:match=manga-chapters-*)"

[tool.versioningit.tag2version]
rmprefix = "manga-chapters-"

[tool.versioningit.write]
template = '''
__version__ = "{version}"
__version_tuple__ = {version_tuple}
'''
file = "src/manga_chapters/_version.py"

[tool.ruff]
builtins = ["_", "get_icons"]

[tool.pyright]
typeCheckingMode = "standard"
